[PL-22547]: All Services Upgrade